fix: image overflow

--- a/src/components/CardProduct.module.css
+++ b/src/components/CardProduct.module.css
@@ -21,8 +21,8 @@
 }
 
 .addToCartContainer img {
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   object-fit: contain;
 }
 
@@ -38,8 +38,8 @@
 }
 
 .productImage img {
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   object-fit: contain;
 }
 
