--- a/src/pages/HalamanCheckout/Content.module.css
+++ b/src/pages/HalamanCheckout/Content.module.css
@@ -26,7 +26,7 @@
 }
 
 .gambar-content img {
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   object-fit: contain;
 }
