--- a/src/pages/RincianPesanan/ProdukPesanan.module.css
+++ b/src/pages/RincianPesanan/ProdukPesanan.module.css
@@ -39,8 +39,8 @@
 }
 
 .productImage img {
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   object-fit: contain;
 }
 
